結果を提出した

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -107,7 +107,7 @@
    "outputs": [],
    "source": [
     "def create_age_group_dummy(df : pd.DataFrame) -> pd.DataFrame:\n",
-    "    INTERVAL_BIN = 5\n",
+    "    INTERVAL_BIN = 10\n",
     "\n",
     "    max_age : int = df[\"Age\"].max().astype(int)\n",
     "    min_age : int = df[\"Age\"].min().astype(int)\n",
@@ -218,6 +218,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "print(x.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -260,17 +269,28 @@
     "predict_values = model.predict(test_dummy_df)\n",
     "# # しきい値を 0.5 に設定し、0 or 1 に変換\n",
     "predict_binary = (predict_values >= 0.5).astype(int)\n",
-    "predict_binary\n",
+    "# merge_df  = pd.DataFrame(columns={\n",
+    "#     \"PassengerId\" : test_df[\"PassengerId\"],\n",
+    "#     \"Survived\" : predict_binary\n",
+    "# })\n",
+    "merge_df  = pd.DataFrame({\n",
+    "    \"PassengerId\" : test_df[\"PassengerId\"],\n",
+    "    \"Survived\" : predict_binary,\n",
+    "})\n",
     "\n",
-    "# merge_df = pd.concat([test_df[\"PassengerId\"] , predict_binary]  , axis=1)\n",
-    "# merge_df = merge_df.rename(columns={0 : \"Survived\"})\n",
-    "# merge_df.sort_values(by=\"PassengerId\")\n",
     "\n",
     "\n",
-    "# os.makedirs(\"./out\" , exist_ok=True)\n",
+    "os.makedirs(\"./out\" , exist_ok=True)\n",
     "\n",
-    "# merge_df.to_csv(\"./out/result.csv\", index=False)\n",
-    "# merge_df\n"
+    "merge_df.to_csv(\"./out/result.csv\", index=False)\n",
+    "merge_df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 提出"
    ]
   },
   {
@@ -278,7 +298,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "! cd out & kaggle competitions submit titanic -f result.csv -m \"api submission\""
+   ]
   },
   {
    "cell_type": "code",
